--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8080:8080"
       - "50000:50000"
-    container_name: jenkins
+    container_name: jenkins_v1
     volumes:
       - jenkins_home:/var/jenkins_home
       - /usr/share/maven:/usr/share/maven
@@ -23,7 +23,7 @@ services:
 
   sonarqube:
     image: sonarqube:latest
-    container_name: sonarqube
+    container_name: sonarqube_v1
     ports:
       - "9000:9000"
     volumes:
